--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUURFECT MATCH</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
@@ -31,10 +32,19 @@ background-size: cover;
     text-align: center;
     padding-top:25% ;
     background-size: cover;
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+                 0px 8px 13px rgba(0,0,0,0.1)
+                 0px 18px 23px rgba(0,0,0,0.1);
 }
 html{
     height: 100%;
 }
+    
+hr{
+    width:400px;
+    border-top: 1px solid #f8f8f8;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+ }
 
 h1{
     font-weight: 800;
@@ -73,10 +83,10 @@ h3{
             </ul>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Sign Up</a>
+                    <a class="nav-link active" aria-current="page" href="#">Sign Up<i class="fa fa-user-plus"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">LogIn</a>
+                    <a class="nav-link active" aria-current="page" href="#">LogIn<i class="fa fa-user"></i></a>
                </li>   
             </ul>
           </div>
@@ -88,7 +98,7 @@ h3{
               <h1 style="font-size: 5em; font-weight: 800;">The PURRFECT MATCH</h1>
               <h3>The Only Human-Feline Dating App</h3>
               <hr>
-              <button type="button" class="btn btn-outline-secondary btn-lg" style="background-color: white; color: black;">Get Started!</button>
+              <button type="button" class="btn btn-outline-secondary btn-lg" style="background-color: white; color: black;"><i class="fas fa-paw"></i>Get Started!</button>
            </div>          
        </div>
     </div>
